CHANGES
=======

* fix(dev
* fix(dev): Fix on api to be protected by login fix(usr): Login page is now working correctly using a correct user
* feat(usr): Adding cli script (with default user registration)
* feat(usr): Adding a login page to the api
* feat(dev): Adding dynamic configuration. The configuration file can be automatically generated by the code itself
* fix(dev): Role api is working correctly except a bug on the PUT method in swagger doc feat(dev): Api is now versionned and registered as a blueprint feat(dev): Adding docstring on role api
* fix(dev): Fixing the error on user model fix(pkg): Fixing package name in README
* (Not working