@@ -24,8 +24,13 @@ install:
   - pip install tox
 script:
   - tox -v
+before_script:
+  - mysql -e 'create database lisa_api;'
 notifications:
-  email:
-    on_success: never
-    on_failure: always
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/47c25ea28ce484eed9ca
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: false     # default: false
 
